# bt_ai_ui

./: .gitignore  Cargo.toml  README.md
config/: ai-config.yml  app-config.yml  crypto-config.yml  server-config.yml  tools-def.json
config/ai/: ai-config.yml
config/core/: app-config.yml
linux_service/: bt_ai_ui.service  install.sh
site/: index.html
site/config/: config.js
site/scripts/: config.js  utils.js
site/scripts/ai_ui/: api.js  helper.js  ui.js
site/scripts/speech/: speech2txt.js  txt2speech.js
site/styles/: ai_ui.css
src/: ai.rs  app.rs  config.rs  main.rs  process_exit_codes.rs  utils.rs
src/ai/: ai_client.rs  ai_models.rs  ai_tools.rs  chat_model.rs  message.rs  tools_proxy.rs
src/app/: ai_server.rs  app_state.rs  chat_api_handler.rs  web_app.rs  web_chat.rs  web_models.rs  web_service.rs
src/config/: ai_config.rs  app_config.rs  labels.rs  serv_config.rs
src/utils/: file_utils.rs  http_utils.rs  json_utils.rs  string_utils.rs  toml_utils.rs  yaml_utils.rs
