[package]
name = "ai_ui"
version = "0.1.0"
edition = "2021"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "A simple micro–app UI for oLlama using Rust with tools support configurable via YAML files."
keywords = ["ui","web","ai","ollama"]
categories = ["web-programming::http-server","web-programming::http-client","web-programming"]
readme = "README.md"
repository = "https://github.com/bachuetech/bt_ai_ui.git"
homepage = "https://github.com/bachuetech/bt_ai_ui"
license = "GPL-3.0-only"


[dependencies]
axum = "0.8.1"
bt_logger = "0.2.1"
bt_math = "0.2.1"
reqwest = {version ="0.12.9", features = ["json"] }
serde = { version ="1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
yaml-rust2 = "0.9.0"
