[package]
name = "ai_ui"
version = "0.2.0"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "A simple micro–app UI for oLlama using Rust with tools support configurable via YAML files."
keywords = ["ui","web","ai","ollama"]
categories = ["web-programming::http-server","web-programming::http-client","web-programming"]
readme = "README.md"
repository = "https://github.com/bachuetech/bt_ai_ui.git"
homepage = "https://github.com/bachuetech/bt_ai_ui"
license = "GPL-3.0-only"


[dependencies]
axum = "0.8.1"
bt_ai_core = { git = "https://github.com/bachuetech/bt_ai_core.git", version = "0.1.8" }
bt_core_config = { git = "https://github.com/bachuetech/bt_core_config.git", version = "0.1.2" }
bt_http_cli_conf = "0.1.1"
bt_http_server = { git = "https://github.com/bachuetech/bt_http_server.git", version = "0.1.1" }
bt_http_utils = "0.6.1"
bt_logger = "0.2.2"
bt_math = "0.3.1"
bt_string_utils = "0.1.0"
serde = { version ="1.0.218", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
